5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4343/executions/1582_1326.log
== SUBMITION (2019-03-14 16:30:01) 
-- CODE:
print($40)
print($35)
-- EXECUTION TIME:
0.218449
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    print($40)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:30:36) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.200986
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
